--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:gravity="center">
 
         <TextView
@@ -65,7 +65,6 @@
                 android:layout_height="match_parent"
                 android:textSize="30sp"
                 android:text="Nickname"
-                android:id="@+id/nickname"
                 android:layout_weight="0.4"
                 android:gravity="center"/>
 
@@ -73,7 +72,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
-                android:id="@+id/nickname_content"
+                android:id="@+id/nickname_requester"
                 android:layout_weight="0.6"
                 android:gravity="center"/>
         </LinearLayout>
@@ -91,7 +90,6 @@
                 android:layout_height="match_parent"
                 android:textSize="30sp"
                 android:text="Cellphone"
-                android:id="@+id/cellphone"
                 android:layout_weight="0.4"
                 android:gravity="center"/>
 
@@ -99,7 +97,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
-                android:id="@+id/cellphone_content"
+                android:id="@+id/cellphone_requester"
                 android:layout_weight="0.6"
                 android:gravity="center"/>
         </LinearLayout>
@@ -131,6 +129,63 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:text="Reply"
+            android:gravity="center"/>
+
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:text="Nickname"
+                android:layout_weight="0.4"
+                android:gravity="center"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:id="@+id/nickname_replier"
+                android:layout_weight="0.6"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:text="Cellphone"
+                android:layout_weight="0.4"
+                android:gravity="center"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:id="@+id/cellphone_replier"
+                android:layout_weight="0.6"
+                android:gravity="center"/>
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -157,6 +212,15 @@
         </LinearLayout>
 
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Please enter your personal information to let requester know!!"
+            android:gravity="center"/>
+
+
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
