--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,17 +13,17 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="fill_parent"
-        android:layout_height="180dp" />
+        android:layout_height="250dp" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="180dp"
+        android:layout_height="250dp"
         android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/viewGroup"
             android:layout_width="fill_parent"
-            android:layout_height="180dp"
+            android:layout_height="250dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:gravity="center_horizontal"
@@ -39,20 +39,22 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="132dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="bottom|center_horizontal"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginBottom="00dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="0dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/welcome"
             android:layout_marginBottom="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:textSize="35sp"
-            android:text="Welcome to our Apps"/>
+            android:text="Welcome to our Apps"
+            android:layout_marginLeft="10dp" />
 
 
         <TextView
@@ -60,7 +62,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/explanation"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="5dp"
             android:textSize="20sp"
             android:text="You can add a request and \n find someone to help you!!"/>
     </LinearLayout>
