--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,22 +13,51 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="fill_parent"
-        android:layout_height="250dp" />
+        android:layout_height="250dp"
+        android:layout_marginTop="35dp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="HelpBuyFood"
+            android:id="@+id/hometitle"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_alignParentTop="true"
+            android:textSize="30dp"
+            android:textColor="#ffea00" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:orientation="vertical" >
+        android:layout_height="280dp"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="35dp">
 
         <LinearLayout
             android:id="@+id/viewGroup"
             android:layout_width="fill_parent"
             android:layout_height="250dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
             android:gravity="center_horizontal"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginBottom="59dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="35dp">
         </LinearLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -130,6 +159,8 @@
         android:id="@+id/textView3"
         android:layout_gravity="right|bottom"
         android:textSize="15dp" />
+
+
 
 
 </FrameLayout>
