--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -48,7 +48,8 @@
         android:maxHeight="50dp"
         android:height="75dp"
         android:gravity="center_vertical"
-        android:paddingTop="20dp" />
+        android:paddingTop="20dp"
+        android:layout_marginTop="10dp" />
 
     <ImageView
         android:id="@+id/imageView1"
