--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_gravity="top"
     android:orientation="vertical"
-    tools:context="com.example.simon.help.MainListActivity">
+    tools:context="com.example.simon.help.MainListActivity"
+    android:background="@drawable/bg6">
 
 
 
