--- a/app/src/main/res/layout/activity_reply.xml
+++ b/app/src/main/res/layout/activity_reply.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="top"
-    tools:context="com.example.simon.help.Reply">
+    tools:context="com.example.simon.help.Reply"
+    android:background="@drawable/bg4">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,7 +23,8 @@
             android:layout_height="wrap_content"
             android:textSize="40sp"
             android:text="Reply"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="#FFFFFF" />
 
 
 
@@ -49,7 +51,7 @@
                 android:textSize="30sp"
                 android:id="@+id/nickname_content"
                 android:layout_weight="0.6"
-                android:gravity="center"/>
+                android:gravity="center" />
         </LinearLayout>
 
         <LinearLayout
