--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="top"
-    tools:context="com.example.simon.help.Request">
+    tools:context="com.example.simon.help.Request"
+    android:background="@drawable/bg6">
 
     <LinearLayout
         android:orientation="vertical"
